Abilities aligned left with bullets. Modal resize with screensize

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <title>Edy Dawson</title>
 
 <!-- Bootstrap -->
-<link rel="stylesheet" href="css/bootstrap.css">
+<!--<link rel="stylesheet" href="css/bootstrap.css">-->
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel='stylesheet' type='text/css'>
 
 <link rel="stylesheet" type="text/css" href="css/portfolio.css">
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -170,7 +171,8 @@
       </div>
 
       <!-- Add modal element here -->
-      <div id="myModal" class="modal" style="width: 440px;">
+      <div id="myModal" class="modal" style="width: 40%;">
+      <!-- <div id="myModal" class="modal">-->
             <div class="modal-content">
             <span class="close cursor" onclick="closeModal()">&times;</span>
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -750,18 +752,41 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 col-sm-12 text-center"> 
-        <h3 style="font-size: 20px; font-weight: 500; font-family: inherit;">Development</h3>
-        <p>HTML5, CSS3, SASS, JavaScript, jQuery, C#<br /><em>(Ruby on Rails, Python, Java, PHP, Perl)</em></p>
+      <div class="col-lg-4 col-sm-12 text-left"> 
+        <h3 style="font-size: 20px; font-weight: 500; font-family: inherit; margin-left: 20px;">Development</h3>
+        <ul>
+          <li>HTML5, CSS3, SASS, JavaScript, jQuery, C#</li>
+          <li><em>(Ruby on Rails, Python, Java, PHP, Perl)</em></li>
+        </ul>
+        <!--<p>HTML5, CSS3, SASS, JavaScript, jQuery, C#<br /><em>(Ruby on Rails, Python, Java, PHP, Perl)</em></p>-->
       </div>  
-      <div class="col-lg-4 col-sm-12 text-center"> 
-        <h3 style="font-size: 20px; font-weight: 500; font-family: inherit;">Frameworks &amp; Tools</h3>
-        <p>.NET, Bootstrap, Sencha ExtJS, Drupal, WordPress<br /><em>(learning React and Angular)</em><br />
-        Node, SQL Server, MySQL, Oracle, MS Visual Studio<br />Sublime, MS Office Suite, Adobe Creative Suite<br />WebStorm, GitLab, GitHub, Mercurial</p>
+      <div class="col-lg-4 col-sm-12 text-left"> 
+        <h3 style="font-size: 20px; font-weight: 500; font-family: inherit; margin-left: 20px;">Frameworks &amp; Tools</h3>
+        <ul>
+          <li>.NET, Bootstrap, Sencha ExtJS <em>(learning React.js)</em></li>
+          <li>Drupal, WordPress</li>
+          <li>SQL Server, MySQL, Node</li>
+          <li>MS Visual Studio, Sublime, WebStorm</li>
+          <li>Adobe Creative Suite, MS Office Suite</li>
+          <li>GitLab, GitHub, Mercurial</li>
+        </ul>
+        <!--<p>.NET, Bootstrap, Sencha ExtJS, Node<br />
+        Drupal, WordPress<br />
+        <em>(learning React and Angular)</em><br />
+        SQL Server, MySQL, Oracle<br />
+        MS Visual Studio, Sublime, WebStorm<br />
+        MS Office Suite, Adobe Creative Suite<br />
+        GitLab, GitHub, Mercurial</p>-->
       </div>      
-      <div class="col-lg-4 col-sm-12 text-center"> 
-        <h3 style="font-size: 20px; font-weight: 500; font-family: inherit;">Design &amp; Illustration</h3>
-        <p>Adobe Photoshop &amp; Illustrator<br />Watercolor, Pen &amp Ink, Colored Pencil<br /><em>(learning Sketch)</em></p>
+      <div class="col-lg-4 col-sm-12 text-left"> 
+        <h3 style="font-size: 20px; font-weight: 500; font-family: inherit; margin-left: 20px;">Design &amp; Illustration</h3>
+        <ul>
+          <li>Adobe Photoshop &amp; Illustrator</li>
+          <li>Watercolor, Pen &amp Ink, Colored Pencil</li>
+          <li><em>(learning Sketch)</em></li>
+        </ul>
+
+        <!--<p>Adobe Photoshop &amp; Illustrator<br />Watercolor, Pen &amp Ink, Colored Pencil<br /><em>(learning Sketch)</em></p>-->
       </div>
       <div class="row">
       <div class="col-lg-12 page-header text-center">
@@ -875,7 +900,7 @@
         <p>&nbsp;</p>
       </div>
 
-      <div class="col-lg-4 col-sm-12 text-left"> 
+      <!--<div class="col-lg-4 col-sm-12 text-left"> 
         <h3 style="margin-top: 15px;">North American Mortgage</h3>
         <p style="font-size: 14px;"><strong>Web Developer</strong><br />March 1998 to June 1999<br />Santa Rosa, CA</p>
         <details>
@@ -910,16 +935,16 @@
           <summary style="font-size: 11px; font-style: italic; padding-bottom: 15px;">Expand to View</summary>
         <ul style="margin-left: -25px;">
             <li style="margin-bottom: 6px;">Created Disney children’s book illustrations.</li>
-            <li style="margin-bottom: 6px;">Produced Mcmillan/McGraw-Hill scholastic series illustrations and book production.</li>
+            <li style="margin-bottom: 6px;">Produced Mcmillan/McGraw-Hill scholastic series illustrations and book production.</li>-->
             <!--<li style="margin-bottom: 6px;">Trained publication staff in desktop-publishing at Hewlett-Packard and Computer Associates.</li>-->
-            <li style="margin-bottom: 6px;">Created marketing materials for Santa Rosa Symphony for 10+ years.</li>
-            <!--<li style="margin-bottom: 6px;">Produced annual reports for City of Santa Rosa.</li>-->
+            <!--<li style="margin-bottom: 6px;">Created marketing materials for Santa Rosa Symphony for 10+ years.</li>
+            <li style="margin-bottom: 6px;">Produced annual reports for City of Santa Rosa.</li>
             <li style="margin-bottom: 6px;">Designed ads, annual reports, books, brochures, catalogs, illustrations, logos, magazines, and newsletters for multiple clients.</li>
-            <!--<li style="margin-bottom: 6px;">Created multiple projects from conception and design to production.</li>-->
+            <li style="margin-bottom: 6px;">Created multiple projects from conception and design to production.</li>
             <li style="margin-bottom: 6px;">Clients included: Disney, Mcmillan/McGraw-Hill, Santa Rosa Symphony, Computer Associates, Hewlett-Packard, City of Santa Rosa, O’Dell Printing, Lithocraft Printing, and Canine Companions.</li>
       </ul>
       </details>
-      </div>
+      </div>-->
 
       <div class="row">
       <div class="col-lg-12 page-header text-center">
@@ -1007,7 +1032,8 @@
 <!-- /FOOTER --> 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="js/jquery-1.11.3.min.js"></script> 
-<script src="js/bootstrap.js"></script>
+<!--<script src="js/bootstrap.js"></script>-->
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/portfolio.js"></script>
 </body>
 </html>
