Correct typo in Abilities section

--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
         <h3 style="font-size: 20px; font-weight: 500; font-family: inherit; margin-left: 20px;">Design &amp; Illustration</h3>
         <ul>
           <li>Adobe Photoshop &amp; Illustrator</li>
-          <li>Watercolor, Pen &amp Ink, Colored Pencil</li>
+          <li>Watercolor, Pen &amp; Ink, Colored Pencil</li>
           <li><em>(learning Sketch)</em></li>
         </ul>
 
