To move Abilities above Portfolio section

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="height: 300px; margin-top: -20px;">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#portfolio">portfolio <span class="sr-only">(current)</span></a> </li>
-        <li><a href="#skillset">abilities</a> </li>
+        <!--<li class="active"><a href="#portfolio">portfolio <span class="sr-only">(current)</span></a> </li>-->
+        <li class="active"><a href="#skillset">abilities <span class="sr-only">(current)</span></a> </li>
+        <li><a href="#portfolio">portfolio</a> </li>
         <li><a href="#experience">experience</a></li>
         <li><a href="#education">education</a></li>
         <li><a href="#contact">contact</a></li>
@@ -63,6 +64,52 @@
   </div>
 </header>
 <!-- /HEADER --> 
+
+ <!-- SECTION-skillset -->
+ <section>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 page-header text-center" style="margin-top: -20px;">
+        <h2 id="skillset" style="color: #356F9F;">ABILITIES</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 col-sm-12 text-left"> 
+        <h3 style="font-size: 20px; font-weight: 500; font-family: inherit; margin-left: 20px;">Development</h3>
+        <ul>
+          <li>HTML5, CSS3, SASS, JavaScript, jQuery, C#</li>
+          <li><em>(Ruby on Rails, Python, Java, PHP, Perl)</em></li>
+        </ul>
+      </div>  
+      <div class="col-lg-4 col-sm-12 text-left">  
+        <h3 style="font-size: 20px; font-weight: 500; font-family: inherit; margin-left: 20px;">Frameworks &amp; Tools</h3>
+        <ul>
+          <li>.NET, Bootstrap, Sencha ExtJS <em>(learning React.js)</em></li>
+          <li>Drupal, WordPress</li>
+          <li>SQL Server, MySQL, Node</li>
+          <li>MS Visual Studio, Sublime, WebStorm</li>
+          <li>Adobe Creative Suite, MS Office Suite</li>
+          <li>GitLab, GitHub, Mercurial</li>
+        </ul>
+      </div>      
+      <div class="col-lg-4 col-sm-12 text-left"> 
+        <h3 style="font-size: 20px; font-weight: 500; font-family: inherit; margin-left: 20px;">Design &amp; Illustration</h3>
+        <ul>
+          <li>Adobe Photoshop &amp; Illustrator</li>
+          <li>Watercolor, Pen &amp; Ink, Colored Pencil</li>
+          <li><em>(learning Sketch)</em></li>
+        </ul>
+      </div>
+      <div class="row">
+      <div class="col-lg-12 page-header text-center">
+        <p><a class="text-center" style="font-size: 10px;" href="#brand">return to top</a></p>
+      </div>
+      </div>
+    </div>
+  </div>
+  <!-- /CONTAINER--> 
+</section>
+<!-- /SECTION-skillset -->
 
 <!-- SECTION-portfolio -->
 <section>
@@ -742,52 +789,6 @@
   <!-- /container -->
  <!--</section> -->
  <!-- /SECTION-portfolio -->
-
- <!-- SECTION-skillset -->
- <section>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 page-header text-center" style="margin-top: -20px;">
-        <h2 id="skillset" style="color: #356F9F;">ABILITIES</h2>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4 col-sm-12 text-left"> 
-        <h3 style="font-size: 20px; font-weight: 500; font-family: inherit; margin-left: 20px;">Development</h3>
-        <ul>
-          <li>HTML5, CSS3, SASS, JavaScript, jQuery, C#</li>
-          <li><em>(Ruby on Rails, Python, Java, PHP, Perl)</em></li>
-        </ul>
-      </div>  
-      <div class="col-lg-4 col-sm-12 text-left"> 
-        <h3 style="font-size: 20px; font-weight: 500; font-family: inherit; margin-left: 20px;">Frameworks &amp; Tools</h3>
-        <ul>
-          <li>.NET, Bootstrap, Sencha ExtJS <em>(learning React.js)</em></li>
-          <li>Drupal, WordPress</li>
-          <li>SQL Server, MySQL, Node</li>
-          <li>MS Visual Studio, Sublime, WebStorm</li>
-          <li>Adobe Creative Suite, MS Office Suite</li>
-          <li>GitLab, GitHub, Mercurial</li>
-        </ul>
-      </div>      
-      <div class="col-lg-4 col-sm-12 text-left"> 
-        <h3 style="font-size: 20px; font-weight: 500; font-family: inherit; margin-left: 20px;">Design &amp; Illustration</h3>
-        <ul>
-          <li>Adobe Photoshop &amp; Illustrator</li>
-          <li>Watercolor, Pen &amp; Ink, Colored Pencil</li>
-          <li><em>(learning Sketch)</em></li>
-        </ul>
-      </div>
-      <div class="row">
-      <div class="col-lg-12 page-header text-center">
-        <p><a class="text-center" style="font-size: 10px;" href="#brand">return to top</a></p>
-      </div>
-      </div>
-    </div>
-  </div>
-  <!-- /CONTAINER--> 
-</section>
-<!-- /SECTION-skillset -->
   
  <!-- SECTION-experience -->
  <section>
@@ -832,9 +833,9 @@
       <div class="col-lg-4 col-sm-12 text-left"> 
         <h3 style="margin-top: 15px;"><a href="http://www.ou.edu/" target="_blank">University of Oklahoma</a></h3>
         <p style="font-size: 14px;"><strong>Web Developer/IT Analyst</strong><br />November 2010 to September 2012<br />Norman, OK</p>
-        <ul style="margin-left: -25px;">
         <details>
           <summary style="font-size: 11px; font-style: italic; padding-bottom: 15px;">Expand to View</summary>
+        <ul style="margin-left: -25px;">
             <li style="margin-bottom: 6px;">Developed web applications connecting two campus enterprise systems for OU’s 10,000+ employees.</li>
             <li style="margin-bottom: 6px;">Enhanced OU HR websites to increase usability and efficiency.</li>
             <li style="margin-bottom: 6px;">Created, enhanced, and maintained OU HR websites and web applications using ASP.NET, C#, JavaScript, AJAX, Classic ASP, Telerik UI, SQL, and CSS in a Visual Studio/SQL Server development environment.</li>
@@ -864,9 +865,9 @@
       <div class="col-lg-4 col-sm-12 text-left"> 
         <h3 style="margin-top: 15px;"><a href="http://www.stjosephhealth.org/" target="_blank">St. Joseph Health Systems</a></h3>
         <p style="font-size: 14px;"><strong>Technical Specialist</strong><br />November 2006 to September 2007<br />Santa Rosa, CA</p>
-        <ul style="margin-left: -25px;">
         <details>
           <summary style="font-size: 11px; font-style: italic; padding-bottom: 15px;">Expand to View</summary>
+        <ul style="margin-left: -25px;">
             <li style="margin-bottom: 6px;">Successfully streamlined production and publishing process timeframe from one day to three hours.</li>
             <li style="margin-bottom: 6px;">Created and maintained financial reporting website and clinical, costing, and budgeting applications and databases – such as TSI, Meditech, and Hyperion Enterprise/Pillar.</li>
             <li style="margin-bottom: 6px;">Wrote and edited technical documentation.</li>
